--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 .container {
     display: grid;
-    width: 200px;
+    width: 960px;
+    height: 960px;
     grid-gap: 1px;
 }
 
 .square {
     border: solid black 1px;
-    width: 50px;
-    height: 50px;
+}
+
+.newgrid-button {
+    margin-bottom: 20px;
 }
